--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     height: 100vh;
     text-align: center;
-    background: url("https://free-png.ru/wp-content/uploads/2021/10/free-png.ru-159.png");
+    background: url("https://wallpapercave.com/wp/wp5863592.jpg");
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -21,9 +21,9 @@ body {
 
 /*! Wrapper ========================================== */
 .wrapper {
-    background-color: whitesmoke;
+    /* background-color: whitesmoke;
     padding: 60px 30px;
-    box-shadow: 7px 5px 16px blue;
+    box-shadow: 7px 5px 16px blue; */
 
 }
 
@@ -31,6 +31,9 @@ body {
 /** Wrapper title settings  */
 .wrapper h1{
     font-size: 50px;
+    color: peru;
+    padding: 30px 20px;
+    background: black;
 }
 
 /** Countdown timer block settings  */
@@ -63,6 +66,8 @@ body {
     justify-content: center;
     background-color: blue;
     border-radius: 20px 20px 0px 0px;
+    mix-blend-mode: darken;
+    text-shadow: 4px 4px black;
 }
 
 
@@ -79,4 +84,20 @@ body {
     color: #fff;
     text-transform: uppercase;
     font-size: 20px;
+}
+
+.orange-bcg {
+    box-shadow: 1px 1px 100px orange;
+}
+
+.blue-bcg {
+    box-shadow: 1px 1px 100px blue;
+}
+
+.green-bcg {
+    box-shadow: 1px 1px 100px green;
+}
+
+.red-bcg {
+    box-shadow: 1px 1px 100px red;
 }
