--- a/style.css
+++ b/style.css
@@ -104,6 +104,31 @@ body {
 
 /*! Media screen  */
 
+@media screen and (min-width:1600px) {
+    .countdowntimer {
+        padding: 20px;
+    }
+
+    .wrapper h1 {
+        font-size: 88px;
+        padding: 10px 20px;
+    }
+
+    .timer {
+    width: 300px;
+    height: 300px;
+    }
+
+    .timer h2{
+        font-size: 160px;
+    }
+
+    .timer p{
+        font-size: 40px;
+    }
+}
+
+
 @media screen and (max-width:776px){
     .wrapper h1{
         font-size: 40px;
